deployment/dev/shepherd_dev_deployment.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "shepherd-web-dev"
  namespace: "kube-system"
  labels:
    app: "shepherd-web-dev"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "shepherd-web-dev"
  template:
    metadata:
      labels:
        app: "shepherd-web-dev"
    spec:
      containers:
        - name: "shepherd"
          image: 947456759585.dkr.ecr.us-east-1.amazonaws.com/shepherd:4f3c07d77868891c32f4944f47f72dc18af094c9
          ports:
            - containerPort: 8000
