deployment/dev/shepherd_dev_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service-shepherd-web"
  namespace: "kube-system"
  labels:
    app: shepherd-web-dev
spec:
  selector:
    app: shepherd-web-dev
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
