deployment/dev/shepherd_dev_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "shepherd-web-dev-ingress"
  namespace: "kube-system"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-002c9732277bfaabd
  labels:
    app: shepherd-web-dev-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "service-shepherd-web"
              servicePort: 8000
